# defectdojo-utils

./: .coveragerc  .flake8  .gitignore  Dockerfile  README.md  tox.ini
.github/workflows/: defectdojo-utils.yaml  docker-create-publish.yaml  release.yaml  shared-on-fail-slack-notifier.yaml  shared-slack-notifier.yaml  static-test.yaml  static-tests.yaml
defectdojo/: pyproject.toml  tox.ini
defectdojo/reports/: unit-test-py310.xml  unit-test-py311.xml  unit-test-py39.xml
defectdojo/src/: active_findings.py  collect_common_data.py  defectdojo_api.py  findings_thresholds.py  github_actions.py  import_scan_results.py
defectdojo/tests/: test_defectdojo_api.py
reports/: unit-test-py310.xml  unit-test-py311.xml  unit-test-py39.xml
tests/: __init__.py  conftest.py  test_active_findings.py  test_defectdojo_api.py  test_findings_thresholds.py  test_github_actions.py  test_import_scan_results.py
tests/data/: dummy_scan_data.js  findings.json  github_output
