[project]
name = "defectdojo_github_action"
version = "0.0.1"
description = "Reusable GitHub action to interacting with defectdojo api from GitHub Actions"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests == 2.28.2"
]
[project.optional-dependencies]
test = [
    "pytest == 7.2.1",
    "pytest-cov == 4.0.0",
    "requests_mock == 1.10.0",
    "pytest-mock == 3.10.0"
]

[project.urls]
"Homepage" = "https://github.com/portswigger-cloud/defectdojo-github-action"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.setuptools.packages.find]
where = ["src"]

